--- a/intex2.html
+++ b/intex2.html
@@ -28,7 +28,7 @@ alert("자바 스크립트 환영!!");
 <nav>
 <ul>
 <li> <a herf="http://wwwdju.ac.kr"> 대학</a></li>
-<li> <a herf="http://hive.dju.ac.kr"> 대학</a></li>
+<li> <a herf="http://hive.dju.ac.kr"> 실습서버</a></li>
 </ul></nav>
 <section>
 <h2>자바 스크립트를 실행합니다</h2>
